fix issue with container on small screens

--- a/src/_container.scss
+++ b/src/_container.scss
@@ -21,7 +21,7 @@
   }
 
   @include media-xs {
-    width: 100%;
+    width: calc(100% - 32px);
     margin-left: 16px;
     margin-right: 16px;
   }
